got monsters to z-index correctly

--- a/assets/game.scss
+++ b/assets/game.scss
@@ -12,7 +12,7 @@ button{
     border:0 solid white;
     padding:0;
 }
-#fight{
+.fight{
     margin:0;
 }
 /*-------------------------------*/
@@ -25,12 +25,31 @@ button{
     position: relative;
     left:-2000px;
     transition: left 4s linear;
+    filter: grayscale(100%);
 }
-.lass-vanish{
-    z-index: 0;
+// .lass-vanish{
+//     z-index: 0;
+// }
+#lass-dudetrio{
+    display: none;
 }
-#pre-lass-monster-message{
-    display:none;
+#you-codemaster{
+    display: none;
+}
+.enemy-monster-img{
+    width:30rem;
+}
+#dudes-pic{
+    z-index: -10;
+}
+#code-pic{
+    z-index: -10;
+}
+.dudes{
+    position: absolute;
+    left: 700px;
+    top: 25px;
+    filter: grayscale(100%);
 }
 .enemy-img{
     width:20rem;
@@ -42,12 +61,23 @@ button{
     position: relative;
     right:-2800px;
     transition: right 4s linear;
+    filter: grayscale(100%);
 }
-.glorious-vanish{
-    z-index: 0;
+.codemaster{
+    position: absolute;
+    left:100px;
+    bottom: 130px;
+    filter: grayscale(100%);
+
 }
+// .glorious-vanish{
+//     z-index: 0;
+// }
 .player-img{
     width:25rem;
+}
+.player-monster-img{
+    width:20rem;    
 }
 #fight-button{
    z-index: -50;
@@ -55,7 +85,7 @@ button{
 .message-box{
     position: absolute;
     z-index: -50;
-    left:510px;
+    left:330px;
     top:350px;
     transition: z-index 4s linear;
 }
@@ -76,19 +106,21 @@ button{
 
 /*----------STRUCTURE----------*/
 body{
-   background:lightgray;
-   min-height: 100%vh;
+   background:white;
+   height: 700px;
+   
 }
 .everything{
-    height:100%;
+    height: 100%;
     width:75%;
     margin:auto;
     background: white;
     overflow: hidden;
+    position: relative;
 }
 .foot{
-    position: relative;
-    vertical-align: bottom;
+    position: absolute;
+    left:800px;
 }
 
 /*---------ANIMATION--------*/
